--- a/RimLocalizer/MainWindow.xaml
+++ b/RimLocalizer/MainWindow.xaml
@@ -51,7 +51,13 @@
                 <TextBlock Grid.Row="0" Grid.Column="0" Text="Моды" FontSize="16" FontWeight="Bold" Margin="0,0,0,10" VerticalAlignment="Center"/>
                 <Button Grid.Row="0" Grid.Column="1" Content="Загрузить моды" Command="{Binding LoadModsCommand}" VerticalAlignment="Center" />
                 <!--Modlist-->
-                <ListBox Grid.Row="1" Grid.ColumnSpan="2" Name="ModsListBox" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" ItemsSource="{Binding Mods}" />
+                <ListBox Grid.Row="1" Grid.ColumnSpan="2" Name="ModsListBox" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" ItemsSource="{Binding Mods}" SelectedItem="{Binding SelectedMod}">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Name}" />
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
             </Grid>
         </Border>
         
